--- a/templates/history/search_form.html
+++ b/templates/history/search_form.html
@@ -1,4 +1,10 @@
 {% load static %}
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/autocomplete.css' %}" type="text/css" />
+    <script type="text/javascript" src="{% static 'js/jquery.autocomplete.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/autocomplete.js' %}"></script>
+{% endblock %}
+
 <div class="bar">
     <a href="#" class="expand">Dérouler</a>
     <a href="#" class="hide">Cacher</a>
