--- a/templates/order/orderitem_detail.html
+++ b/templates/order/orderitem_detail.html
@@ -1,5 +1,11 @@
 {% extends "base_orders.html" %}
 {% load filters static %}
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/autocomplete.css' %}" type="text/css" />
+    <script type="text/javascript" src="{% static 'js/jquery.autocomplete.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/autocomplete.js' %}"></script>
+{% endblock %}
+
 {% block menu_order %}active{% endblock %}
 
 {% block header %}
