--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -6,6 +6,12 @@
     <h3>{{ product_count }} produits référencés.</h3>
 {% endblock %}
 
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/autocomplete.css' %}" type="text/css" />
+    <script type="text/javascript" src="{% static 'js/jquery.autocomplete.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/autocomplete.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 
 {# QUICK SEARCH FORM - always displayed #}
