Can now select "transfer permission"

--- a/templates/admin/group_item.html
+++ b/templates/admin/group_item.html
@@ -57,6 +57,8 @@
 						<div class="cleaner"></div>
 						{{ form.custom_edit_budget }}{{ form.custom_edit_budget.label }}
 						<div class="cleaner"></div>
+						{{ form.custom_can_transfer }}{{ form.custom_can_transfer.label }}
+						<div class="cleaner"></div>
 						{{ form.custom_history_budget }}{{ form.custom_history_budget.label }}
 					</td>
 					<td>
