--- a/templates/product/item.html
+++ b/templates/product/item.html
@@ -2,6 +2,12 @@
 {% load filters static %}
 {% block product_list %}active{% endblock %}
 
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/autocomplete.css' %}" type="text/css" />
+    <script type="text/javascript" src="{% static 'js/jquery.autocomplete.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/autocomplete.js' %}"></script>
+{% endblock %}
+
 {% block header %}
 <div class="btn_wrapper">
   <a href="{% url 'product_delete' product.id %}" class="btn_big">
