--- a/templates/budgetlines/search_form.html
+++ b/templates/budgetlines/search_form.html
@@ -39,7 +39,7 @@
         <td>{{ filter_form.nature }}</td>
         <td width="10%"></td>
         <td>Désignation:</td>
-        <td colspan="2">{{ filter_form.product }}</td>
+        <td colspan="2">{{ filter_form.product__icontains }}</td>
       </tr>
       <tr>
         <td>Fournisseur:</td>
